# api_verify

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
deploy/: README.md  api-verify.service  install.sh  nginx-apiverify.conf
docs/: api-relay-verification-report.md  initial-implementation-plan.md
examples/: openai-compatible-provider.json
src/api_verify/: __init__.py  adapter.py  cli.py  models.py  probes.py  report.py  scoring.py  store.py
src/api_verify/web/: __init__.py  app.py  models.py  ratelimit.py  runner.py  safety.py  scorer.py  web_probes.py
src/api_verify/web/adapters/: __init__.py  anthropic.py  base.py  gemini.py  openai_compat.py
src/api_verify/web/static/: adapters.js  app.js  i18n.js  index.html  probes.js  scorer.js  style.css
tests/: test_probes.py  test_scoring.py  test_web_adapters.py
