[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "api-verify"
version = "0.1.0"
description = "Evidence-oriented verifier for OpenAI-compatible API relay authenticity claims."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "redis>=5",
    "pydantic>=2",
]

[project.scripts]
api-verify = "api_verify.cli:main"

[tool.setuptools.package-data]
"api_verify.web" = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
